--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <!-- Background video -->
   <div class="tm-video-wrapper">
       <video autoplay muted loop id="tm-video">
-          <source src="video/hydrogeomatics-bg.mp4" type="video/mp4">
+          <source src="video/hydrogeomatic.mp4" type="">
       </video>
   </div>
 <!-- Background video -->
